# ec-hub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: fee_rules.yaml  selectors.yaml  settings.yaml
docs/: TODO.md
frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
issues/: 001_scheduler-initialization.md  001_uv-docker-dev-environment.md  002_messenger-ebay-integration.md  003_api-endpoint-expansion.md  003_typed-config-validation.md  004_database-path-hardcode.md  004_frontend-feature-expansion.md  005_config-management-ui.md  006_candidate-provenance-and-dedup.md  006_testing-coverage.md  007_listing-traceability.md  007_scraper-resilience.md  008_exchange-rate-fallback.md  008_matching-engine-improvement.md  009_database-path-hardcode.md  009_exchange-rate-fallback.md  010_pnpm-migration-cleanup.md  010_scraper-resilience.md  011_usecase-repository-refactor.md  012_candidate-provenance-and-dedup.md  012_job-run-observability.md  013_matching-engine-improvement.md  013_messenger-ebay-integration.md  014_listing-traceability.md  014_scheduler-initialization.md  015_api-endpoint-expansion.md  015_typed-config-validation.md  016_config-management-ui.md  016_price-model-lifecycle.md  017_frontend-feature-expansion.md  017_job-run-observability.md  018_testing-coverage.md  018_uv-docker-dev-environment.md  Done_002_pnpm-migration-cleanup.md  Done_003_typed-config-validation.md  Done_005_usecase-repository-refactor.md  Done_009_exchange-rate-fallback.md  Done_010_pnpm-migration-cleanup.md  Done_011_price-model-lifecycle.md  Done_014_scheduler-initialization.md  (+1 more)
tests/: test_amazon.py  test_api.py  test_circuit_breaker.py  (+32 more)
(+95 files in other folders)
